provide /usr/share/xserver-xorg/pci/nvidia.ids
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1041 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-glx.install.in
+++ b/debian/nvidia-glx.install.in
@@ -7,3 +7,4 @@ usr/lib/tls/libnvidia-tls.so.#VERSION#
 usr/X11R6/lib/libXvMCNVIDIA.so.#VERSION#		usr/lib/
 usr/X11R6/lib/modules/drivers/nvidia_drv.so		usr/lib/xorg/modules/drivers/
 usr/X11R6/lib/modules/extensions/libglx.so.#VERSION#	usr/lib/xorg/modules/extensions/
+debian/nvidia.ids					usr/share/xserver-xorg/pci/
