rename XF86Config.sample to xorg.conf.sample (closes: #392243)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1044 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-glx.README.Debian.in
+++ b/debian/nvidia-glx.README.Debian.in
@@ -41,7 +41,7 @@ may want to enable TwinView, too, by adding this section:
 There are many more settings that can be tuned in xorg.conf.  For file
 format description and general options please see the xorg.conf(5) manpage.
 See /usr/share/doc/nvidia-glx#LEGACY#/README.txt.gz and
-/usr/share/doc/nvidia-glx#LEGACY#/examples/XF86Config.sample.gz
+/usr/share/doc/nvidia-glx#LEGACY#/examples/xorg.conf.sample.gz
 for descriptions of all supported NVIDIA driver specific options.
 
 
