* libnvidia-compiler1{,-ia32}: ship the libnvidia-compiler.so symlink,   libcuda1 uses this name to dlopen the compiler library
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1052 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-compiler1.links.in
+++ b/debian/libnvidia-compiler1.links.in
@@ -1,1 +1,2 @@
 usr/lib/libnvidia-compiler.so.#VERSION# usr/lib/libnvidia-compiler.so.1
+usr/lib/libnvidia-compiler.so.1		usr/lib/libnvidia-compiler.so
