--- a/debian/libnvidia-compiler1-ia32.links.in
+++ b/debian/libnvidia-compiler1-ia32.links.in
@@ -1,1 +1,2 @@
 usr/lib32/libnvidia-compiler.so.#VERSION# usr/lib32/libnvidia-compiler.so.1
+usr/lib32/libnvidia-compiler.so.1		usr/lib32/libnvidia-compiler.so
