* nvidia-opencl-icd{,-ia32}: recommend libnvidia-compiler1{,-ia32}
opencl applications might compile their opencl source on-the-fly


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1053 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -325,8 +325,6 @@ Description: NVIDIA runtime compiler library
  general purpose computation.
  .
  This package contains the runtime compiler library.
- .
- It's currently unclear when libcuda.so needs this library.
 
 Package: libnvidia-compiler1-ia32
 Section: non-free/libs
@@ -340,8 +338,6 @@ Description: NVIDIA runtime compiler library (32-bit)
  general purpose computation.
  .
  This package contains the runtime compiler library (32-bit).
- .
- It's currently unclear when libcuda.so needs this library.
 
 Package: nvidia-opencl-common
 Section: non-free/libs
@@ -363,6 +359,7 @@ Depends: ${misc:Depends},
  nvidia-opencl-common,
  libopencl1,
  libcuda1 (>= 195)
+Recommends: libnvidia-compiler1
 Enhances: libopencl1
 Provides: opencl-icd
 Description: NVIDIA OpenCL ICD
@@ -379,6 +376,7 @@ Depends: ${misc:Depends},
  nvidia-opencl-common,
  lib32opencl1,
  libcuda1-ia32 (>= 195)
+Recommends: libnvidia-compiler1-ia32
 Enhances: lib32opencl1
 Provides: opencl-icd
 Description: NVIDIA OpenCL ICD (32-bit)
