when generating the changelog for the module source, only edit the package name of the most recent revision and don't add an extra LEGACY mark, the original package name already head one (if needed)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1064 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -179,7 +179,7 @@ override_dh_strip:
 	< $< > $@
 
 debian/module/debian/changelog: debian/changelog
-	sed 's/^nvidia-graphics-drivers/nvidia-kernel$(legacy)/g' $< > $@
+	sed '1s/^nvidia-graphics-drivers/nvidia-kernel/g' $< > $@
 
 # Renaming control files for legacy packaging
 ifneq (,$(legacy))
