+  * use generic download URLs pointing to the directories, not the files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1066 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/copyright.in
+++ b/debian/copyright.in
@@ -2,8 +2,8 @@ This package was debianized by Randall Donald <rdonald@debian.org> on
 Sat, 11 Aug 2001 14:27:28 -0700.
 
 It was downloaded from
-#URL_X86#
-#URL_X86_64#
+ftp://download.nvidia.com/XFree86/Linux-x86/
+ftp://download.nvidia.com/XFree86/Linux-x86_64/
 
 Upstream Author: NVIDIA <linux-bugs@nvidia.com>
 
