--- a/debian/nvidia-glx-ia32.lintian-overrides.in
+++ b/debian/nvidia-glx-ia32.lintian-overrides.in
@@ -7,7 +7,7 @@ nvidia-glx#LEGACY#-ia32: spelling-error-in-binary
 
 # We divert a bunch of files not provided by this package to ensure that
 # programs don't pick up the wrong libGL by mistake.
-nvidia-glx#LEGACY#-ia32: diversion-for-unknown-file
+nvidia-glx#LEGACY#-ia32: diversion-for-unknown-file usr/lib32/libGL.so.1.2 preinst:*
 
 # We divert the original /usr/lib32/libGL.so symlink.
 # In order to retain its functionality (i.e. pointing the MESA libGL.so.1)
