--- a/debian/nvidia-glx.lintian-overrides.in
+++ b/debian/nvidia-glx.lintian-overrides.in
@@ -9,7 +9,8 @@ nvidia-glx#LEGACY#: spelling-error-in-binary
 
 # We divert a bunch of files not provided by this package to ensure that
 # programs don't pick up the wrong libGL by mistake.
-nvidia-glx#LEGACY#: diversion-for-unknown-file
+nvidia-glx#LEGACY#: diversion-for-unknown-file usr/lib/libGL.so preinst:*
+nvidia-glx#LEGACY#: diversion-for-unknown-file usr/lib/libGL.so.1.2 preinst:*
 
 # The diversions are placed here.
 nvidia-glx#LEGACY#: package-contains-empty-directory usr/lib/nvidia/
