--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Suggests: nvidia-settings,
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
 Breaks: xserver-xorg-core (<< 2:1.6)
+Provides: xserver-xorg-video-6
 Conflicts:
  nvidia-glx-legacy,
  nvidia-glx-legacy-71xx,
