Avoid needless ldconfig calls in nvidia-vdpau-driver
* Tell dh_makeshlibs that the loadable vdpau driver in /usr/lib/vdpau
  isn't a traditional shared library so that it doesn't unnecessarily
  add the ldconfig calls to the maintainer scripts.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1106 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -144,6 +144,9 @@ override_dh_installchangelogs:
 override_dh_bugfiles:
 	dh_bugfiles -A
 
+override_dh_makeshlibs:
+	dh_makeshlibs -Xusr/lib/vdpau
+
 override_dh_gencontrol:
 	dh_gencontrol -- -V'nvidia:Version=$(version)' -V'nvidia:Legacy=$(legacy)' \
 		-V'nvidia:LegacyDesc=$(if $(NVIDIA_LEGACY), ($(NVIDIA_LEGACY)xx legacy version))'
