--- a/debian/nvidia-glx.lintian-overrides.in
+++ b/debian/nvidia-glx.lintian-overrides.in
@@ -17,3 +17,8 @@ nvidia-glx#LEGACY#: package-contains-empty-directory usr/lib/nvidia/
 
 # Referenced by upstream documentation.
 nvidia-glx#LEGACY#: script-with-language-extension usr/bin/nvidia-bug-report.sh
+
+# This package is a strange special case since it overrides standard
+# libraries and diverts them, so the package name won't ever be able to
+# match the library names it provides.
+nvidia-glx#LEGACY#: package-name-doesnt-match-sonames
