dh_makeshlibs needs to ignore /usr/lib32/vdpau, too
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1135 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -145,7 +145,7 @@ override_dh_bugfiles:
 	dh_bugfiles -A
 
 override_dh_makeshlibs:
-	dh_makeshlibs -Xusr/lib/vdpau
+	dh_makeshlibs -Xusr/lib/vdpau -Xusr/lib32/vdpau
 
 override_dh_gencontrol:
 	dh_gencontrol -- -V'nvidia:Version=$(version)' -V'nvidia:Legacy=$(legacy)' \
