Let nvidia-libgl1 provide libgl1.  (Closes: #389971)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1144 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -103,6 +103,7 @@ Recommends: nvidia-kernel${nvidia:Legacy}-${nvidia:Version},
 Suggests:
  nvidia-kernel${nvidia:Legacy}-dkms (>= ${nvidia:Version})
  | nvidia-kernel${nvidia:Legacy}-source (>= ${nvidia:Version})
+Provides: libgl1
 Conflicts:
  nvidia-glx-legacy,
  nvidia-glx-legacy-71xx,
